--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <title>Im' In</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <%= stylesheet_link_tag 'font-awesome' %>
+      <%= stylesheet_link_tag 'font-awesome' %>
       <%= javascript_include_tag 'jquery'%>
       <%= javascript_include_tag 'skel'%>
       <%= javascript_include_tag 'util'%>
@@ -38,10 +38,11 @@
     <section id="main">
       <header>
         <h2>One App.<h2>
-          <h2>A Thousand Connections. </h2><br>
-          <span class="avatar"><%= image_tag("joel.jpg") %></span>
+          <h2>A Thousand Destinations. </h2><br>
+          <span class="avatar"><%= image_tag("logo2.jpg") %></span>
+          <!-- 
           <h1 class="name">Jane Doe</h1>
-          <p class="program">Senior Psychonautics Engineer</p>
+          <p class="program">Senior Psychonautics Engineer</p> -->
         </header>
         <hr />
         <ul class="actions">
