--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1736,6 +1736,7 @@
 		.button:hover {
 			box-shadow: inset 0 0 0 1px #2ebaae;
 			background-color: #2ebaae !important;
+			color: #ffffff !important;
 			opacity: 0.7
 		}
 
@@ -2388,7 +2389,6 @@
 				border-top: dotted 1px rgba(160, 160, 160, 0.3);
 				margin: 1.5em 0 0 0;
 				padding: 1.5em 0 0 0;
-				margin-left: 40%; 
 			}
 
 				ul.posts li:first-child {
