--- a/app/views/flights/_flights_feed.html.erb
+++ b/app/views/flights/_flights_feed.html.erb
@@ -22,8 +22,8 @@
         <article class="post">
           <header>
             <div class="title mapContainer">
-              <h3 class="icon fa-plane"> <%= flight.departure %></h3>
-              <p class="icon fa-home"> <%= flight.destination %> </p>
+              <p class="icon fa-home">From: <%= flight.departure %></p>
+              <h3 class="icon fa-plane">To: <%= flight.destination %> </h3>
               <div class="4u$ 12u$(small)">
                 <%= image_tag "http://maps.google.com/maps/api/staticmap?size=500x250&sensor=false&zoom=4&markers=#{flight.latitude}%2C#{flight.longitude}", class:"map" %>
               </div> 
@@ -49,7 +49,7 @@
               </ul>
               <ul class="stats">
                 <!-- <li><a href="#">General</a></li> -->
-                <li><a href="#" class="icon fa-star fa-2x">28</a></li>
+                <!-- <li><a href="#" class="icon fa-star fa-2x">28</a></li> -->
                 <!-- <li><a href="#" class="icon fa-comment">128</a></li> -->
               </ul>
             </footer>
