--- a/app/views/requests/_requests_feed.html.erb
+++ b/app/views/requests/_requests_feed.html.erb
@@ -20,14 +20,14 @@
         <article class="post">
           <header>
             <div class="title mapContainer">
-              <h3 class="icon fa-plane"> <%= request.departure %></h3>
-              <p class="icon fa-home"> <%= request.destination %> </p>
+              <p class="icon fa-home">Send From: <%= request.departure %></p>
+              <h3 class="icon fa-plane">Send To: <%= request.destination %> </h3>
               <div class="4u$ 12u$(small) ">
                 <%= image_tag "http://maps.google.com/maps/api/staticmap?size=500x250&sensor=false&zoom=4&markers=#{request.latitude}%2C#{request.longitude}", class:"map" %>
               </div> 
             </div>
             <div class="meta">
-              <p class="published icon fa-calendar"> Send By<br><%= Request.day(request.date) %></p>
+              <p class="published icon fa-calendar"> Send By:<br><%= Request.day(request.date) %></p>
               <a href="#" class="author">
                 <span class="name">
                   <%= request.user.first_name %>
@@ -46,7 +46,7 @@
               </ul>
               <ul class="stats">
                 <!-- <li><a href="#">General</a></li> -->
-                <li><a href="#" class="icon fa-star fa-2x">28</a></li>
+                <!-- <li><a href="#" class="icon fa-star fa-2x">28</a></li> -->
                 <!-- <li><a href="#" class="icon fa-comment">128</a></li> -->
               </ul>
             </footer>
