--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,6 +3,7 @@
         <!-- Header -->
           <header id="header">
             <h1><a href="<%= root_path %>">Apostell</a></h1>
+            <!-- <h1><a href="<%= root_path %>"><%=image_tag("logo.png")%></a></h1> -->
             <nav class="links">
               <ul>
             <li><a href="<%= flights_path %>">Trips</a></li>
