modify landing page image and logo

--- a/app/assets/javascripts/landing_page.js.erb
+++ b/app/assets/javascripts/landing_page.js.erb
@@ -1,9 +1,48 @@
 $( document ).ready(function() {
 
 
-  // setTimeout(function () {
-  //   $("body").css("background-image","url(<%= asset_path('tokyo.gif') %>)");
-  // }, 2500);
+  setTimeout(function () {
+    $("body").attr("id","body_paris");
+  }, 5000);
+  setTimeout(function () {
+    $("body").attr("id","body_london");
+  }, 10000);
+  setTimeout(function () {
+    $("body").attr("id","body_cape_town");
+  }, 15000);
+  setTimeout(function () {
+    $("body").attr("id","body_amsterdam");
+  }, 20000);
+  setTimeout(function () {
+    $("body").attr("id","body_nyc");
+  }, 25000);
+  setTimeout(function () {
+    $("body").attr("id","body_paris2");
+  }, 30000);
+  setTimeout(function () {
+    $("body").attr("id","body_tokyo");
+  }, 35000);  
+  setTimeout(function () {
+    $("body").attr("id","body_paris");
+  }, 40000);
+  setTimeout(function () {
+    $("body").attr("id","body_london");
+  }, 45000);
+  setTimeout(function () {
+    $("body").attr("id","body_cape_town");
+  }, 50000);
+  setTimeout(function () {
+    $("body").attr("id","body_amsterdam");
+  }, 55000);
+  setTimeout(function () {
+    $("body").attr("id","body_nyc");
+  }, 60000);
+  setTimeout(function () {
+    $("body").attr("id","body_paris2");
+  }, 65000);
+  setTimeout(function () {
+    $("body").attr("id","body_tokyo");
+  }, 70000);
   // setTimeout(function () {
   //   $(".landing_page").css('background-image','url(nyc.jpg)');
   // }, 4500);
