--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,14 @@
     <!-- Main -->
     <section id="main">
       <header>
-        <h2>One App.<h2>
-          <h2>A Thousand Destinations. </h2><br>
-          <span class="avatar"><%= image_tag("logo2.jpg") %></span>
+        <h3>One Community.<h3>
+          <h3>One Million Shipping Destinations. </h3>
+          <span class="avatar"><%= image_tag("logo.png") %></span>
           <!-- 
           <h1 class="name">Jane Doe</h1>
           <p class="program">Senior Psychonautics Engineer</p> -->
         </header>
+
         <hr />
         <ul class="actions">
           <li><a href="/users/sign_in" class="button">Already A User</a></li>
