add username check/fix overlap fields/add entity_name

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -36,7 +36,7 @@
       <div><%= f.label :email %>
         <%= f.email_field :email, :autofocus => true %></div>
 <br>
-        <div><%= f.submit "Send me reset password instructions" %></div>
+        <div><%= f.submit "Send me the instructions" %></div>
         <% end %>
 
         <%= render "devise/shared/links" %>
