--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -10,7 +10,7 @@
               </a>
             </h3>
             <p>
-              <%= user.school.name %>
+              <%= user.entity_name.capitalize %>
             </p>
             <% if current_user.friend?(user) %>
             <p>
@@ -19,7 +19,7 @@
           <% elsif current_user.followed_by?(user) and !current_user.following?(user) %>
             <%= button_to "Accept Friend Request", { action: "follow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
           <% elsif current_user.following?(user) and !current_user.followed_by?(user) %>
-            <%= button_to "Your Friend Request Is Pending", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
+            <%= button_to "Your Request Is Pending", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
           <% else current_user.following?(user) and !current_user.followed_by?(user) %>
             <%= button_to "Connect", { action: "follow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
           <% end %>
