--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3359,7 +3359,7 @@
 		position: fixed;
 		right: 0;
 		top: 0;
-		width: 25em;
+		width: 15em;
 		z-index: 10002;
 	}
 
@@ -3476,6 +3476,77 @@
     margin-left: 1em; }
 
 
-   .request_details {
-   	
-   }
+
+/* INBOX */
+
+
+.inbox .scrollable {
+  overflow:scroll;
+  height: 20em;
+  width: 50em
+  margin-bottom: 0em;
+}
+
+.inbox .scrollable ul {
+	overflow: auto;
+	max-height: 5em;
+}
+
+.inbox .scrollable li {
+	padding-top: 0em;
+}
+
+.inbox p{
+	max-width: 55em;
+	position: relative;
+	top: 2em;
+  margin-bottom: 0em;
+  padding-top: 0em;
+}
+
+.message_body_current_user {
+	color: rgb(46, 186, 174);
+	font-weight: 600;
+	padding:0.5em;
+	border-radius: 0.5em
+}
+
+.message_body_other_user {
+	/*color: rgba(160, 160, 160, 0.21);*/
+	color: black;
+	font-weight: 600;
+	padding:0.5em;
+	border-radius: 0.5em
+}
+
+.message_time {
+	font-size: 55%
+}
+
+.inbox .form{
+	background-color: transparent !important;
+}
+
+.inbox_form_field{
+    width: 65em;
+}
+
+.inbox_form_button{
+    width: 100%;
+}
+
+@media screen and (max-width: 736px) {
+
+	.inbox .scrollable{
+		width: 100%
+	}
+
+	.inbox_form_field{
+    width: 20em;
+}
+
+.inbox_form_button{
+    width: 100%;
+}
+
+}
