--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,89 +1,66 @@
+    <header>
+      <center>
+        <h3> 
+          <% if @conversation.sender = current_user %>
+          <%= @conversation.recipient.full_name %>
+          <% else %>
+            <%= @conversation.sender.full_name %>
+          <% end %>
+        </h3>
+      <center>
+    </header>
 
-<head>
-  <%= stylesheet_link_tag "inbox" %>
-  <%= javascript_include_tag "inbox" %>
-</head>
+        <div id="main inbox">
 
-<body id="top">
-
-  <div id="main">
-    <% if @over_ten %>
-    <%= link_to "Show More", "?m=all" %>
-    <% end %>
-
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3 col-md-2">
-        </div>
-        <div class="col-sm-9 col-md-12">
-          <!-- Split button -->
-          <div class="btn-group">
-          </div>
-
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-
-          <div class="panel panel-primary">
-            <div class="panel-heading">
+          <div class="container inbox">
+            <section id="users">
               <center>
-                <span class="glyphicon glyphicon-comment">
-                  
-                </span> Chat
-
-              </center>
-            </div>
-            <div class="panel-body scrollable">
-              <ul class="chat">
-                <% if @messages.count > 0 %>
+              <ul class="posts scrollable">      
                 <% @messages.each do |message| %>
-                <li class="left clearfix"><span class="chat-img pull-left">
-                  <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle" />
-                </span>
-                <div class="chat-body clearfix">
-                  <div class="header">
-                    <strong class="primary-font pull-left"><%= message.user.full_name %></strong> 
-                    <small class="text-muted pull-right">
-                      <span class="glyphicon glyphicon-time">
-                      </span><%= message.formatted_updated_at %> 
-                    </small>
-                  </div>
-                  <br>
-                  <p class="pull-left">
-                    <%= message.body %>
-                  </p>
-                </div>
+                <% if !message.user_id.nil? %>
+                <!-- Posts List -->
+                <li>
+                  <article>
+                    <header>
+                      <% if message.user == current_user %>
+                      <p class="pull-right message_time">
+                        <%= message.formatted_updated_at %>
+                      </p>
+                      <br>
+                      <p class="pull-right message_body_current_user">
+                        <%= message.body %>
+                      </p>
+                        <% else %>
+                      <p class="pull-left message_time">
+                        <%= message.formatted_updated_at %>
+                      </p>
+                      <br>
+                      <p class="pull-left message_body_other_user">
+                        <%= message.body %>
+                      </p>
+                        <% end %>
+                      </p>
+                    </a>
+                  </header>
+                </article>
               </li>
-           <% end %>
-           <% end %>
-         </ul>
+              <% end %>
+              <% end %>
+            </ul>
+          </center>
+
+        <%= form_for([@conversation, @message], html: {class: 'ui reply form '}) do |f| %>
+        <div class="panel-footer">
+          <div class="input-group">
+           <%= f.text_area :body, class: 'inbox_form_field ', rows: 2, placeholder: "Type your message...",id:"btn-input", required: true %>
+           <%= f.text_field :user_id, value: current_user.id, type: 'hidden' %>
+             <%= f.submit 'Send', class: 'inbox_form_button ', id:'btn-chat' %>
+         </div>
        </div>
-       <%= form_for([@conversation, @message], html: {class: 'ui reply form'}) do |f| %>
-       <div class="panel-footer">
-        <div class="input-group">
-         <%= f.text_field :body, class: 'form-control input-sm', placeholder: "Type your message here...",id:"btn-input", required: true %>
-         <%= f.text_field :user_id, value: current_user.id, type: 'hidden' %>
-         <span class="input-group-btn">
-           <%= f.submit 'Send', class: 'btn btn-warning btn-xs', id:'btn-chat' %>
-         </button>
-       </span>
+          </section>
+
+       <% end %>
+        </div>
+
      </div>
-   </div>
- </div>
-</div>
-</div>
-</center>
-</div>
 
-
-<div class=”field”>
-</div>
-<div>
-</div>
-<% end %>
-</center>
-</div>
-
-</body>
