--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3363,6 +3363,16 @@
 		z-index: 10002;
 	}
 
+	#menu img{
+		/*border-radius: 100%;*/
+		height: 3em;
+		width: auto;
+	}
+
+	#profile_image img{
+		border-radius: 100%
+	}
+
 		#menu > * {
 			border-top: solid 1px rgba(160, 160, 160, 0.3);
 			padding: 3em;
