--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,53 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<center class="form">
+<section id="sidebar">
+
+<h2> Edit Your Details </h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div class="field 12u 12u$(small)" id="profile_image"><%= image_tag(resource.avatar) %>
+  <%= f.file_field :avatar, :autofocus => true %>
+</div><br><br>
+
+  <div class="field 12u 12u$(small)"><%= f.label :first_name %>
+  <%= f.text_field :first_name, :autofocus => true %>
+</div><br>
+
+  <div class="field 12u 12u$(small)"><%= f.label :last_name %>
+  <%= f.text_field :last_name, :autofocus => true %>
+</div><br>
+
+  <div class="field 12u 12u$(small)"><%= f.label :email %>
+  <%= f.email_field :email, :autofocus => true %>
+</div><br>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+  <div class="field 12u 12u$(small)">
+    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
+  <%= f.password_field :password, :autocomplete => "off" %>
+</div><br />
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="field 12u 12u$(small)">
+    <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+</div><br />
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+  <div class="field 12u 12u$(small)">
+    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+  <%= f.password_field :current_password, required: true %>
+</div><br />
 
-  <div><%= f.submit "Update" %></div>
+  <div class="field 12u 12u$(small)">
+    <%= f.submit "Update" %>
+  </div>
 <% end %>
-
+<!-- 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p> -->
 
 <%= link_to "Back", :back %>
