--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 
 <h2> Edit Your Details </h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name),accept: 'image/jpeg,image/gif,image/png', :html => {multipart: true, method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
     <div class="field 12u 12u$(small)" id="profile_image"><%= image_tag(resource.avatar) %>
