--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,9 +30,13 @@
     <section id="main">
 
       <h2>Sign up</h2>
-
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
+
+    <div class="field 12u 12u$(small)" id="profile_image"><%= image_tag("bg.jpg") %>
+  <%= f.file_field :avatar, :autofocus => true, required: true %>
+  </div><br><br>
+
 
       <div >
         <%= f.label :your_school_or_company_name %>
