--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -40,20 +40,21 @@
             <!-- Links -->
               <section>
                 <ul class="links">
-            <li><a href="<%= edit_user_registration_path(current_user) %>"><%= image_tag(current_user.avatar) %></a></li>
+            <li><a href="<%= edit_user_registration_path(current_user) %>"><%= image_tag(current_user.avatar) %><br>Profile</a></li>
             <li><a href="<%= flights_path %>"><h3>All Trips</h3></a></li>
             <li><a href="<%= created_flights_path(user_id: current_user.id) %>"><h3>My Trips</h3></a></li>
             <li><a href="<%= requests_path %>"><h3>All Requests</h3></a></li>
             <li><a href="<%= created_requests_path(user_id: current_user.id) %>"><h3>My Requests</h3></a></li>
             <li><a href="<%= conversations_path %>"><h3>Inbox</h3></a></li>
-            <li><a href="<%= users_path %>"><h3>Connections</h3></a></li>
+            <li><a href="<%= users_path %>"><h3>Friends</h3></a></li>
                 </ul>
               </section>
 
             <!-- Actions -->
               <section>
                 <ul class="actions vertical">
-                  <li><a href="<%= destroy_user_session_path %>" class="button big fit", method="delete">Log Out</a></li>
+                  <li><a class="button small fit", id="close_menu" >Close Menu</a></li>
+                  <li><a href="<%= destroy_user_session_path %>" class="button small fit", method="delete">Log Out</a></li>
                 </ul>
               </section>
 
