remove required pic when creating new user

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
       <%= devise_error_messages! %>
 
     <div class="field 12u 12u$(small)" id="profile_image"><%= image_tag("bg.jpg") %>
-  <%= f.file_field :avatar, :autofocus => true, required: true %>
+  <%= f.file_field :avatar, :autofocus => true %>
   </div><br><br>
 
 
