--- a/app/views/flights/_flights_feed.html.erb
+++ b/app/views/flights/_flights_feed.html.erb
@@ -9,8 +9,14 @@
         <!-- <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a> -->
         <header>
           <center>
-            <h2>Trips</h2>
+            <h2>Requests</h2>
+            <% if @flights.present? %>            
             <p>Need Help With Sending A Package?! Here's Who's Traveling</p>
+            <% else %>
+            <br>
+            <br>
+            <h3>Sorry! No Trips To Show You At The Moment! Try Adding More Friends</h3>
+            <% end %>
           </center>
         </header>
       </section>
