--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -12,6 +12,8 @@
             <p>
               <%= user.entity_name.capitalize %>
             </p>
+              <%= button_to "Message", { action: "create",method: :post, controller: 'conversations', class: 'icon fa-envelope',sender_id: current_user.id, recipient_id: user.id} %>
+                
             <% if current_user.friend?(user) %>
             <p>
             <%= button_to "Unfriend", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
