--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -58,10 +58,10 @@
         <%= f.email_field :email, :autofocus => true, required: true %>
       </div>
 
-      <div>
+<!--       <div>
         <%= f.label :username %>
         <%= f.text_field :username, :autofocus => true, required: true %>
-      </div>
+      </div> -->
 
       <div><%= f.label :password, required: true %>
         <%= f.password_field :password %>
