--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,15 @@
         </header>
 
         <hr />
+
         <ul class="actions">
-          <li><a href="/users/sign_in" class="button">Already A User</a></li>
+          <li class="button icon fa-facebook"><%= link_to "Use Your Facebook Details", user_omniauth_authorize_path(:facebook) %></li>
         </ul>
+
+        <ul class="actions">
+          <li><a href="/users/sign_in" class="button">Sign In Through Apostell</a></li>
+        </ul>
+
         <ul class="actions">
           <li><a href="/users/sign_up" class="button">Sign Me Up!</a></li>
         </ul>
@@ -82,6 +88,24 @@
 
   <% else %>
 <body>
+  <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1051690404882304',
+      xfbml      : true,
+      version    : 'v2.5'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
   <%= stylesheet_link_tag 'main' %>
   <!-- NAVBAR -->
 
