--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 <%= stylesheet_link_tag "landing_page" %>
 <%= javascript_include_tag 'landing_page' %>
 
-<body class="landing_page is-loading">
+<body class="landing_page is-loading" id="body_paris2">
 
   <!-- Wrapper -->
   <div id="wrapper">
